--- a/scotty-htmx.cabal
+++ b/scotty-htmx.cabal
@@ -69,12 +69,12 @@ executable scotty-htmx
 
     -- Other library packages from which modules are imported.
     build-depends:    base ^>=4.16.4.0
-                    , scotty
-                    , text
-                    , wai-middleware-static
-                    , lucid
-                    , wai-extra
-                    , sqlite-simple
+                    , scotty ^>= 0.12.1
+                    , text ^>= 2.0.2
+                    , wai-middleware-static ^>= 0.9.2
+                    , lucid ^>= 2.11.1
+                    , wai-extra ^>= 3.1.13.0
+                    , sqlite-simple ^>= 0.4.18.2
 
     -- Directories containing source files.
     hs-source-dirs:   src
